# Project_2024-honors-group3

./: .gitignore  Report.md  all_compare.ipynb  cache_misses.ipynb  project.ipynb  weak_scale.ipynb
Algorithms/: data_generation.cpp  data_generation.hpp  sorting_algorithms.hpp
Code/: data_generation.cpp  data_generation.hpp  main.cpp  sorting_algorithms.cpp  sorting_algorithms.hpp
MPI_Builds/: CMakeLists.txt  cache_miss.grace_job  mpi.grace_job  run_experiments.sh
MPI_Builds/caliper_output/bitonic_sort/2/: bitonic-1-perturbed-p2-a18-11788039.cali  bitonic-random-p2-a16-11788013.cali  bitonic-random-p2-a18-11788047.cali  bitonic-reverse-sorted-p2-a18-11788053.cali  bitonic-sorted-p2-a16-11787938.cali  bitonic-sorted-p2-a18-11788034.cali
caliper_output/: bitonic-p8-a2048.cali  column-p32-a4194304.cali  merge-p32-a4194304.cali  radix-p32-a4194304.cali  sample-p32-a1024.cali  sample-p32-a4194304.cali
caliper_output/radix_sort/: radix-1-perturbed-p1024-a1048576-11844394.cali  radix-1-perturbed-p1024-a16777216-11844412.cali  radix-1-perturbed-p1024-a262144-11844385.cali  radix-1-perturbed-p1024-a268435456-11844431.cali  radix-1-perturbed-p1024-a4194304-11844401.cali  radix-1-perturbed-p1024-a65536-11844366.cali  radix-1-perturbed-p1024-a67108864-11844417.cali  radix-1-perturbed-p128-a1048576-11762474.cali  radix-1-perturbed-p128-a1048576-11844110.cali  radix-1-perturbed-p128-a16777216-11844121.cali  radix-1-perturbed-p128-a262144-11761680.cali  radix-1-perturbed-p128-a262144-11844106.cali  radix-1-perturbed-p128-a268435456-11844136.cali  (+455 more)
(+1871 files in other folders)
